put images in the right folder!!

--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./styles/images/favicon.ico" type="image/x-icon" />
     <title>About Us - CloudLabs</title>
   </head>
   <body id="about-body" class="index-body">
@@ -15,7 +15,7 @@
         <div class="logo">
           <a href="index.html">
             <img
-              src="./images/logo-removebg-preview.png"
+              src="./styles/images/logo-removebg-preview.png"
               alt="CloudLabs logo"
               width="80"
               height="80"
@@ -64,27 +64,27 @@
         </section>
         <!-- Members -->
         <div class="about-card">
-          <img src="./images/member/Simon.png" alt="Tuan Minh member photo">
+          <img src="./styles/images/member/Simon.png" alt="Tuan Minh member photo">
           <h3 class="about-h3">Tuan Minh</h3>
           <p>Role: Leader</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/Nathan.jpeg" alt="Nathan member photo">
+          <img src="./styles/images/member/Nathan.jpeg" alt="Nathan member photo">
           <h3 class="about-h3">Nathan</h3>
           <p>Role: Co-Leader</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/MaiAn.JPG" alt="Mai An member photo">
+          <img src="./styles/images/member/MaiAn.JPG" alt="Mai An member photo">
           <h3 class="about-h3">Mai An</h3>
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/amiru.jpg" alt="Amiru member photo">
+          <img src="./styles/images/member/amiru.jpg" alt="Amiru member photo">
           <h3 class="about-h3">Amiru</h3>
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./images/member/Nhatminh.jpg" alt="Nhat Minh member photo">
+          <img src="./styles/images/member/Nhatminh.jpg" alt="Nhat Minh member photo">
           <h3 class="about-h3">Nhat Minh</h3>
           <p>Role: Member</p>
         </div>
@@ -161,7 +161,7 @@
       <div class="footer-row">
         <div class="footer-col">
           <img
-            src="./images/logo-removebg-preview.png"
+            src="./styles/images/logo-removebg-preview.png"
             class="logo"
             alt="CloudLabs logo"
           />
