--- a/enhancements.html
+++ b/enhancements.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enhancements - CloudLabs</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="styles/images/favicon.ico" type="image/x-icon" />
     <meta name="description" content="Website enhancements" />
   </head>
   <body class="index-body">
@@ -16,7 +16,7 @@
         <div class="logo">
           <a href="index.html">
             <img
-              src="./images/logo-removebg-preview.png"
+              src="styles/images/logo-removebg-preview.png"
               alt="CloudLabs logo"
               width="80"
               height="80"
@@ -137,7 +137,7 @@
       <div class="footer-row">
         <div class="footer-col">
           <img
-            src="./images/logo-removebg-preview.png"
+            src="styles/images/logo-removebg-preview.png"
             class="logo"
             alt="CloudLabs logo"
           />
