--- a/jobs.html
+++ b/jobs.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <link rel="stylesheet" href="draft.css"> -->
     <title>Jobs - CloudLabs</title>
-    <link rel="stylesheet" href="./styles/style.css">
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="styles/images/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
 <body class="index-body">
@@ -17,7 +17,7 @@
           <div class="logo">
             <a href="index.html">
             <img
-            src="./images/logo-removebg-preview.png"
+            src="styles/images/logo-removebg-preview.png"
             alt="CloudLabs logo"
             width="80"
             height="80"
@@ -220,7 +220,7 @@
         <div class="footer-row">
           <div class="footer-col">
             <img
-              src="./images/logo-removebg-preview.png"
+              src="styles/images/logo-removebg-preview.png"
               class="logo"
               alt="CloudLabs logo"
             />
