add header comments

--- a/about.html
+++ b/about.html
@@ -1,3 +1,10 @@
+<!--
+filename: about.html
+authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
+created: 29-Mar-2023
+description: About our team
+-->
+
 <!DOCTYPE html>
 <html lang="en" class="about-class">
   <head>
