--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!--
+filename: index.html
+authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
+created: 29-Mar-2023
+description: CloudLabs home page
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
