--- a/apply.html
+++ b/apply.html
@@ -1,3 +1,10 @@
+<!--
+filename: apply.html
+authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
+created: 29-Mar-2023
+description: Job application page
+-->
+
 <!DOCTYPE html>
 <html lang="en" class="apply-class">
 
