--- a/enhancements.html
+++ b/enhancements.html
@@ -1,3 +1,10 @@
+<!--
+filename: enhancements.html
+authors: Xuan Tuan Minh Nguyen, Nathan Wijaya, Mai An Nguyen, Nhat Minh Tran, Amiru Manthrige
+created: 29-Mar-2023
+description: Explanations for the website enhancements
+-->
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
