--- a/enhancements.html
+++ b/enhancements.html
@@ -84,7 +84,7 @@ description: Explanations for the website enhancements
       </section>
       <!-- ENHANCEMENT 2 -->
       <section>
-        <h2><a href="about.html">Second: CSS Hovering Animations</a></h2>
+        <h2><a href="about.html">Second: CSS Hover Animations</a></h2>
         <p>The second enhancement uses simple hover CSS animation.</p>
         <p>
           The animation is done by adding a hover effect to the group member's
