fix images again :(

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ description: About our team
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
-    <link rel="icon" href="./styles/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="./images/favicon.ico" type="image/x-icon" />
     <title>About Us - CloudLabs</title>
   </head>
   <body id="about-body" class="index-body">
@@ -22,7 +22,7 @@ description: About our team
         <div class="logo">
           <a href="index.html">
             <img
-              src="./styles/images/logo-removebg-preview.png"
+              src="./images/logo-removebg-preview.png"
               alt="CloudLabs logo"
               width="80"
               height="80"
@@ -71,27 +71,27 @@ description: About our team
         </section>
         <!-- Members -->
         <div class="about-card">
-          <img src="./styles/images/member/Simon.png" alt="Tuan Minh member photo">
+          <img src="./images/member/Simon.png" alt="Tuan Minh member photo">
           <h3 class="about-h3">Tuan Minh</h3>
           <p>Role: Leader</p>
         </div>
         <div class="about-card">
-          <img src="./styles/images/member/Nathan.jpeg" alt="Nathan member photo">
+          <img src="./images/member/Nathan.jpeg" alt="Nathan member photo">
           <h3 class="about-h3">Nathan</h3>
           <p>Role: Co-Leader</p>
         </div>
         <div class="about-card">
-          <img src="./styles/images/member/MaiAn.JPG" alt="Mai An member photo">
+          <img src="./images/member/MaiAn.JPG" alt="Mai An member photo">
           <h3 class="about-h3">Mai An</h3>
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./styles/images/member/amiru.jpg" alt="Amiru member photo">
+          <img src="./images/member/amiru.jpg" alt="Amiru member photo">
           <h3 class="about-h3">Amiru</h3>
           <p>Role: Member</p>
         </div>
         <div class="about-card">
-          <img src="./styles/images/member/Nhatminh.jpg" alt="Nhat Minh member photo">
+          <img src="./images/member/Nhatminh.jpg" alt="Nhat Minh member photo">
           <h3 class="about-h3">Nhat Minh</h3>
           <p>Role: Member</p>
         </div>
@@ -168,7 +168,7 @@ description: About our team
       <div class="footer-row">
         <div class="footer-col">
           <img
-            src="./styles/images/logo-removebg-preview.png"
+            src="./images/logo-removebg-preview.png"
             class="logo"
             alt="CloudLabs logo"
           />
