--- a/enhancements.html
+++ b/enhancements.html
@@ -13,7 +13,7 @@ description: Explanations for the website enhancements
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Enhancements - CloudLabs</title>
     <link rel="stylesheet" type="text/css" href="styles/style.css" />
-    <link rel="icon" href="styles/images/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
     <meta name="description" content="Website enhancements" />
   </head>
   <body class="index-body">
@@ -23,7 +23,7 @@ description: Explanations for the website enhancements
         <div class="logo">
           <a href="index.html">
             <img
-              src="styles/images/logo-removebg-preview.png"
+              src="images/logo-removebg-preview.png"
               alt="CloudLabs logo"
               width="80"
               height="80"
@@ -144,7 +144,7 @@ description: Explanations for the website enhancements
       <div class="footer-row">
         <div class="footer-col">
           <img
-            src="styles/images/logo-removebg-preview.png"
+            src="images/logo-removebg-preview.png"
             class="logo"
             alt="CloudLabs logo"
           />
