--- a/jobs.html
+++ b/jobs.html
@@ -14,7 +14,7 @@ description: Job descriptions page
     <!-- <link rel="stylesheet" href="draft.css"> -->
     <title>Jobs - CloudLabs</title>
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="styles/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <!-- <link rel="stylesheet" href="./styles/header_footer.css"> -->
 </head>
 <body class="index-body">
@@ -24,7 +24,7 @@ description: Job descriptions page
           <div class="logo">
             <a href="index.html">
             <img
-            src="styles/images/logo-removebg-preview.png"
+            src="images/logo-removebg-preview.png"
             alt="CloudLabs logo"
             width="80"
             height="80"
@@ -227,7 +227,7 @@ description: Job descriptions page
         <div class="footer-row">
           <div class="footer-col">
             <img
-              src="styles/images/logo-removebg-preview.png"
+              src="images/logo-removebg-preview.png"
               class="logo"
               alt="CloudLabs logo"
             />
