--- a/apply.html
+++ b/apply.html
@@ -12,7 +12,7 @@ description: Job application page
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Apply for our open positions!" />
-  <link rel="icon" href="styles/images/favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
   <link rel="stylesheet" type="text/css" href="styles/style.css" />
   <title>Apply - CloudLabs</title>
 </head>
@@ -22,7 +22,7 @@ description: Job application page
     <nav id="header-nav">
       <div class="logo">
         <a href="index.html">
-          <img src="styles/images/logo-removebg-preview.png" alt="CloudLabs logo" width="80" height="80" /></a>
+          <img src="images/logo-removebg-preview.png" alt="CloudLabs logo" width="80" height="80" /></a>
       </div>
       <ul>
         <li><a href="./index.html">Home</a></li>
@@ -175,7 +175,7 @@ description: Job application page
   <footer id="general-footer">
     <div class="footer-row">
       <div class="footer-col">
-        <img src="styles/images/logo-removebg-preview.png" class="logo" alt="CloudLabs logo" />
+        <img src="images/logo-removebg-preview.png" class="logo" alt="CloudLabs logo" />
         <p>
           Our company provides details of "Chief Technology Officer(CTO)" and
           "Cloud engineering", including base position, skills needed,
