--- a/about.html
+++ b/about.html
@@ -156,11 +156,16 @@ description: About our team
             </tbody>
           </table>
         </section>
-        <!-- Contact Us -->
+        <figure class="about-group-img">
+          <img src="./images/member/member.png" alt="member"/>
+          <figcaption>Deadline Is Coming @ 2023</figcaption>
+        <figure>
+
         <section class="about-mail">
           <p>Want to get in touch with us?</p>
           <a href="mailto:104082552@student.swin.edu.au">Contact Us</a>
         </section>
+
       </div>
     </main>
     <!-- Footer -->
