footer logo links to home page

--- a/apply.html
+++ b/apply.html
@@ -176,7 +176,7 @@ description: Job application page
   <footer id="general-footer">
     <div class="footer-row">
       <div class="footer-col">
-        <img src="images/logo-removebg-preview.png" class="logo" alt="CloudLabs logo" />
+        <a href="index.html"><img src="images/logo-removebg-preview.png" class="logo" alt="CloudLabs logo" /></a>
         <p>
           Our company provides details of "Chief Technology Officer(CTO)" and
           "Cloud engineering", including base position, skills needed,
