--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@ description: CloudLabs home page
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
-          <img
+          <a href="index.html"><img
             src="images/logo-removebg-preview.png"
             class="logo"
             alt="CloudLabs logo"
-          />
+          /></a>
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
             "Cloud engineering", including base position, skills needed,
