--- a/enhancements.html
+++ b/enhancements.html
@@ -143,11 +143,11 @@ description: Explanations for the website enhancements
     <footer id="general-footer">
       <div class="footer-row">
         <div class="footer-col">
-          <img
+          <a href="index.html"><img
             src="images/logo-removebg-preview.png"
             class="logo"
             alt="CloudLabs logo"
-          />
+          /></a>
           <p>
             Our company provides details of "Chief Technology Officer(CTO)" and
             "Cloud engineering", including base position, skills needed,
