--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@ description: About our team
         <figure class="about-group-img">
           <img src="./images/member/member.png" alt="member"/>
           <figcaption>Deadline Is Coming @ 2023</figcaption>
-        <figure>
+        </figure>
 
         <section class="about-mail">
           <p>Want to get in touch with us?</p>
