--- a/jobs.html
+++ b/jobs.html
@@ -45,7 +45,7 @@ description: Job descriptions page
             </div>
         </div>
         <div class="table-of-content">
-            <h2>Table of Content</h2>
+            <h2>Table of Contents</h2>
             <ol>
                 <!-- đổi hết draft html to job html -->
                 <li><a href="jobs.html#cto">Chief Technology Officer</a></li>
@@ -58,8 +58,8 @@ description: Job descriptions page
                 <dl>
                     <dt><strong>Position description reference number</strong></dt>
                     <dd>00000</dd>
-                    <dt><strong>Title of the position of successful applicant</strong></dt>
-                    <dd>Chief Technology Officer</dd>
+                    <dt><strong>Reports to</strong></dt>
+                    <dd>Chief Executive Officer</dd>
                     <dt><strong>Salary range</strong></dt>
                     <dd>237,500 &#8211; 376,665 AUD&#x2F;year <sup><a href="jobs.html#cite">[1]</a></sup></dd>
                 </dl>
@@ -121,7 +121,7 @@ description: Job descriptions page
                 </table>
                 <h4>Preferable</h4>
                 <ul>
-                    <li>Qualification
+                    <li>Qualifications
                         <ul>
                             <li>Master of Computer Science or related fields, a post-graduate degree in computer science or related fields</li>
                             <li>Experience leading programs and projects within the technological environment with ideally around 15 years <sup><a href="jobs.html#cite">[5]</a></sup></li>
@@ -135,8 +135,8 @@ description: Job descriptions page
                 <dl>
                     <dt><strong>Position description reference number</strong></dt>
                     <dd>00001</dd>
-                    <dt><strong>Title of the position of successful applicants</strong></dt>
-                    <dd>Cloud Engineer</dd>
+                    <dt><strong>Reports to</strong></dt>
+                    <dd>Cloud Architecture Manager</dd>
                     <dt><strong>Salary range</strong></dt>
                     <dd>132,500 &#8211; 180,000 AUD&#x2F;year <sup><a href="jobs.html#cite">[3]</a></sup></dd>
                 </dl>
@@ -199,7 +199,7 @@ description: Job descriptions page
                 </table>
                 <h4>Preferable</h4>
                 <ul>
-                    <li>Qualification
+                    <li>Qualifications
                         <ul>
                             <li>Earning computer certifications such as AWS and GCP</li>
                             <li>Experiencing in the field for 3+ years <sup><a href="jobs.html#cite">[6]</a></sup></li>
@@ -211,7 +211,7 @@ description: Job descriptions page
         </div>
             <!-- <hr> -->
         <aside>
-            <h2>Reference</h2>
+            <h2>References</h2>
             <ol>
                 <li id="cite">Anonymous. (n.d.). CTO / Chief Technology Officer Salary & Rates Guide. Clicks IT Recruitment. <a href="https://clicks.com.au/job-salary/cto-chief-technology-officer/">https://clicks.com.au/job-salary/cto-chief-technology-officer/</a></li>
                 <li id="cite">Anonymous. (n.d.) Cloud Engineer. Indeed. <a href="https://www.indeed.com/career/cloud-engineer">https://www.indeed.com/career/cloud-engineer</a></li>
