--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ description: CloudLabs home page
     </section>
     <!-- Link to video report -->
     <section class="link-report">
-      <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank">Link To Video Report</a>
+      <a href="https://www.youtube.com/watch?v=N02GqclyABc" target="_blank">Link To Video Report</a>
     </section>
     </main>
     <!-- Footer -->
