HTML validation check

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@ description: About our team
       </nav>
     </header>
     <main>
-      <section class="about-container">
+      <div class="about-container">
         <div class="header-container">
           <div class="about-typed-out">
             <h1 class="about-h1">About our team</h1>
@@ -165,7 +165,7 @@ description: About our team
           <p>Want to get in touch with us?</p>
           <a href="mailto:104082552@student.swin.edu.au">Contact Us</a>
         </section>
-
+      </div>
       </div>
     </main>
     <!-- Footer -->
