--- a/jobs.html
+++ b/jobs.html
@@ -61,12 +61,12 @@ description: Job descriptions page
                     <dt><strong>Reports to</strong></dt>
                     <dd>Chief Executive Officer</dd>
                     <dt><strong>Salary range</strong></dt>
-                    <dd>237,500 &#8211; 376,665 AUD&#x2F;year <sup><a href="jobs.html#cite">[1]</a></sup></dd>
+                    <dd>237,500 &#8211; 376,665 AUD&#x2F;year <sup><a href="jobs.html#cite1">[1]</a></sup></dd>
                 </dl>
                 <h3>Brief Description</h3>
                 <p>
-                    A Chief Technology Officer needs to improve and perform new technology to establish or innovate our products (including both goods and services) for the client and the customers. <sup><a href="jobs.html#cite">[5]</a></sup>
-                    They ensure that the technical improvements go in line with the company&#39;s target and that the technological resources are used for the right intention &#8211; for technological development. <sup><a href="jobs.html#cite">[4]</a></sup>
+                    A Chief Technology Officer needs to improve and perform new technology to establish or innovate our products (including both goods and services) for the client and the customers. <sup><a href="jobs.html#cite5">[5]</a></sup>
+                    They ensure that the technical improvements go in line with the company&#39;s target and that the technological resources are used for the right intention &#8211; for technological development. <sup><a href="jobs.html#cite4">[4]</a></sup>
                 </p>
                 <h3>Key Responsibilities</h3>
                 <ul>
@@ -124,7 +124,7 @@ description: Job descriptions page
                     <li>Qualifications
                         <ul>
                             <li>Master of Computer Science or related fields, a post-graduate degree in computer science or related fields</li>
-                            <li>Experience leading programs and projects within the technological environment with ideally around 15 years <sup><a href="jobs.html#cite">[5]</a></sup></li>
+                            <li>Experience leading programs and projects within the technological environment with ideally around 15 years <sup><a href="jobs.html#cite5">[5]</a></sup></li>
                         </ul>
                     </li>
                     <li>Knowledgeable in Mathematics, Statistics, and Business</li>
@@ -138,14 +138,14 @@ description: Job descriptions page
                     <dt><strong>Reports to</strong></dt>
                     <dd>Cloud Architecture Manager</dd>
                     <dt><strong>Salary range</strong></dt>
-                    <dd>132,500 &#8211; 180,000 AUD&#x2F;year <sup><a href="jobs.html#cite">[3]</a></sup></dd>
+                    <dd>132,500 &#8211; 180,000 AUD&#x2F;year <sup><a href="jobs.html#cite3">[3]</a></sup></dd>
                 </dl>
                 <h3>Brief Description</h3>
                 <p>
                     A Cloud Engineer needs to create, run, and maintain a cloud infrastructure.
-                    This includes sticking to the best performance of the environment and ensuring network security. <sup><a href="jobs.html#cite">[2]</a></sup>
+                    This includes sticking to the best performance of the environment and ensuring network security. <sup><a href="jobs.html#cite2">[2]</a></sup>
                 </p>
-                <h3>Key Responsibilities <sup><a href="jobs.html#cite">[6]</a></sup></h3>
+                <h3>Key Responsibilities <sup><a href="jobs.html#cite6">[6]</a></sup></h3>
                 <ul>
                     <li>Planning and designing cloud computing products such as cloud applications and services</li>
                     <li>Programming codes for cloud systems in coding languages such as Java, Python, C++, …</li>
@@ -187,7 +187,7 @@ description: Job descriptions page
                     </tr>
                     <tr>
                         <td>Time-management</td>
-                        <td>To work with multiple projcets simultaneously</tr>
+                        <td>To work with multiple projcets simultaneously
                     </tr>
                     <tr>
                         <td rowspan="2">Knowledge</td>
@@ -202,7 +202,7 @@ description: Job descriptions page
                     <li>Qualifications
                         <ul>
                             <li>Earning computer certifications such as AWS and GCP</li>
-                            <li>Experiencing in the field for 3+ years <sup><a href="jobs.html#cite">[6]</a></sup></li>
+                            <li>Experiencing in the field for 3+ years <sup><a href="jobs.html#cite6">[6]</a></sup></li>
                             <li>Experience integrating with third party apps supporting designing cloud infrastructures</li>
                         </ul>
                     </li>
@@ -213,12 +213,12 @@ description: Job descriptions page
         <aside>
             <h2>References</h2>
             <ol>
-                <li id="cite">Anonymous. (n.d.). CTO / Chief Technology Officer Salary & Rates Guide. Clicks IT Recruitment. <a href="https://clicks.com.au/job-salary/cto-chief-technology-officer/">https://clicks.com.au/job-salary/cto-chief-technology-officer/</a></li>
-                <li id="cite">Anonymous. (n.d.) Cloud Engineer. Indeed. <a href="https://www.indeed.com/career/cloud-engineer">https://www.indeed.com/career/cloud-engineer</a></li>
-                <li id="cite">Anonymous. (n.d.). Cloud Engineer Salary & Rates Guide. Clicks IT Recruitment. <a href="https://clicks.com.au/job-salary/cloud-engineer/#:~:text=The%20average%20Cloud%20Engineer%20salary,up%20to%20%24180%2C000%20per%20year">https://clicks.com.au/job-salary/cloud-engineer/#:~:text=The%20average%20Cloud%20Engineer%20salary,up%20to%20%24180%2C000%20per%20year</a></li>
-                <li id="cite">Anonymous. (2020, August 3). Chief Technology Officer Job Description | Hudson. Hudson Australia. <a href="https://au.hudson.com/employers/recruitment/technology-it/chief-technology-officer-job-description/#:~:text=What%20does%20a%20Chief%20Technology">https://au.hudson.com/employers/recruitment/technology-it/chief-technology-officer-job-description/#:~:text=What%20does%20a%20Chief%20Technology</a>‌</li>
-                <li id="cite">Frankenfield, J. (2023, January 23). Chief technology officer (CTO): Definition, how to become one, average salary. Investopedia. <a href="https://www.investopedia.com/terms/c/chief-technology-officer.asp">https://www.investopedia.com/terms/c/chief-technology-officer.asp</a></li>
-                <li id="cite">Indeed Editorial Team. (2023, March 10). Cloud Engineer Roles And Responsibilities: A Complete Guide. Indeed. <a href="https://in.indeed.com/career-advice/finding-a-job/cloud-engineer-roles-and-responsibilities">https://in.indeed.com/career-advice/finding-a-job/cloud-engineer-roles-and-responsibilities</a></li>
+                <li id="cite1">Anonymous. (n.d.). CTO / Chief Technology Officer Salary & Rates Guide. Clicks IT Recruitment. <a href="https://clicks.com.au/job-salary/cto-chief-technology-officer/">https://clicks.com.au/job-salary/cto-chief-technology-officer/</a></li>
+                <li id="cite2">Anonymous. (n.d.) Cloud Engineer. Indeed. <a href="https://www.indeed.com/career/cloud-engineer">https://www.indeed.com/career/cloud-engineer</a></li>
+                <li id="cite3">Anonymous. (n.d.). Cloud Engineer Salary & Rates Guide. Clicks IT Recruitment. <a href="https://clicks.com.au/job-salary/cloud-engineer/#:~:text=The%20average%20Cloud%20Engineer%20salary,up%20to%20%24180%2C000%20per%20year">https://clicks.com.au/job-salary/cloud-engineer/#:~:text=The%20average%20Cloud%20Engineer%20salary,up%20to%20%24180%2C000%20per%20year</a></li>
+                <li id="cite4">Anonymous. (2020, August 3). Chief Technology Officer Job Description | Hudson. Hudson Australia. <a href="https://au.hudson.com/employers/recruitment/technology-it/chief-technology-officer-job-description/#:~:text=What%20does%20a%20Chief%20Technology">https://au.hudson.com/employers/recruitment/technology-it/chief-technology-officer-job-description/#:~:text=What%20does%20a%20Chief%20Technology</a>‌</li>
+                <li id="cite5">Frankenfield, J. (2023, January 23). Chief technology officer (CTO): Definition, how to become one, average salary. Investopedia. <a href="https://www.investopedia.com/terms/c/chief-technology-officer.asp">https://www.investopedia.com/terms/c/chief-technology-officer.asp</a></li>
+                <li id="cite6">Indeed Editorial Team. (2023, March 10). Cloud Engineer Roles And Responsibilities: A Complete Guide. Indeed. <a href="https://in.indeed.com/career-advice/finding-a-job/cloud-engineer-roles-and-responsibilities">https://in.indeed.com/career-advice/finding-a-job/cloud-engineer-roles-and-responsibilities</a></li>
             </ol>
         </aside>
     </main>
