--- a/jobs.html
+++ b/jobs.html
@@ -52,6 +52,7 @@ description: Job descriptions page
                 <li><a href="jobs.html#cloud_en">Cloud Engineer</a></li>
             </ol>
         </div>
+        <!-- JOB 1 -->
         <div class="job-des">
             <section>
                 <h2 id="cto">Chief Technology Officer</h2>
@@ -130,6 +131,7 @@ description: Job descriptions page
                     <li>Knowledgeable in Mathematics, Statistics, and Business</li>
                 </ul>
             </section>
+            <!-- JOB 2 -->
             <section>
                 <h2 id="cloud_en">Cloud Engineer</h2>
                 <dl>
@@ -209,7 +211,7 @@ description: Job descriptions page
                 </ul>
             </section>
         </div>
-            <!-- <hr> -->
+            <!-- REFERENCES -->
         <aside>
             <h2>References</h2>
             <ol>
