--- a/jobs.html
+++ b/jobs.html
@@ -44,6 +44,7 @@ description: Job descriptions page
                 <h1>Our open positions</h1>
             </div>
         </div>
+        <!-- Table of Contents -->
         <div class="table-of-content">
             <h2>Table of Contents</h2>
             <ol>
